[gd_scene load_steps=11 format=3 uid="uid://c2m6i3mibcjbn"]

[ext_resource type="Script" uid="uid://c2svdi2xh3tns" path="res://gd/pantalla_principal.gd" id="1_uw7aw"]
[ext_resource type="Texture2D" uid="uid://cack4oy1nh6wb" path="res://Assets/fondo_principal.png" id="3_8risq"]
[ext_resource type="Texture2D" uid="uid://buv5dej0ia122" path="res://Assets/Button.png" id="3_terxd"]
[ext_resource type="Texture2D" uid="uid://dlqgy5sldj2p3" path="res://Assets/Bloodpact Letras.png" id="3_wnfxn"]
[ext_resource type="AudioStream" uid="uid://q8xjah5rwxef" path="res://music/pasar_encima_button.mp3" id="5_2r7uv"]
[ext_resource type="PackedScene" uid="uid://b18s4yd57m0th" path="res://Assets/Assets animados/sombra_angela_animada.tscn" id="5_8risq"]
[ext_resource type="FontFile" uid="uid://b30c1fih5l3hh" path="res://fonts/THENIGHTLAMP.ttf" id="5_a13a4"]
[ext_resource type="PackedScene" uid="uid://b3pr7wuuyjn15" path="res://Assets/Assets animados/sombra_alex_animado.tscn" id="6_2r7uv"]
[ext_resource type="Texture2D" uid="uid://gdxbsm1dn1jl" path="res://Assets/Audio.png" id="8_54mhx"]
[ext_resource type="AudioStream" uid="uid://dchf8xklt234e" path="res://music/Click_Button.mp3" id="11_2r7uv"]

[node name="Pantalla_principal" type="Node2D"]
script = ExtResource("1_uw7aw")

[node name="Fondo_principal" type="Sprite2D" parent="."]
modulate = Color(0.687215, 0.687215, 0.687215, 1)
position = Vector2(581, 348)
scale = Vector2(1.15833, 1.15833)
texture = ExtResource("3_8risq")

[node name="BloodpactLetras" type="Sprite2D" parent="."]
position = Vector2(590, 210)
scale = Vector2(0.716386, 0.716386)
texture = ExtResource("3_wnfxn")

[node name="Sombra_Alex_animado" parent="." instance=ExtResource("6_2r7uv")]
modulate = Color(0.61339, 0.61339, 0.61339, 1)
position = Vector2(169, 412)

[node name="Sombra_Angela_animada" parent="." instance=ExtResource("5_8risq")]
modulate = Color(0.674815, 0.674815, 0.674815, 1)
position = Vector2(1003, 359)

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 396.0
offset_top = 386.0
offset_right = 773.0
offset_bottom = 459.0
mouse_default_cursor_shape = 3

[node name="PlayButton" type="Sprite2D" parent="TextureButton"]
position = Vector2(193, 172)
rotation = -3.14159
scale = Vector2(0.388175, 1.05312)
texture = ExtResource("3_terxd")
flip_v = true

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButton"]
stream = ExtResource("5_2r7uv")
volume_db = -15.928

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 404.0
offset_top = 468.0
offset_right = 786.0
offset_bottom = 527.0
mouse_default_cursor_shape = 3

[node name="GaleryButton" type="Sprite2D" parent="TextureButton2"]
position = Vector2(182, 159)
scale = Vector2(0.394531, 1)
texture = ExtResource("3_terxd")

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButton2"]
stream = ExtResource("5_2r7uv")
volume_db = -15.928

[node name="Click_Button" type="AudioStreamPlayer" parent="TextureButton2"]
stream = ExtResource("11_2r7uv")

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 391.0
offset_top = 547.0
offset_right = 780.0
offset_bottom = 598.0
mouse_default_cursor_shape = 3

[node name="CreditsButton" type="Sprite2D" parent="TextureButton3"]
position = Vector2(195, 154)
scale = Vector2(0.394531, 1)
texture = ExtResource("3_terxd")

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButton3"]
stream = ExtResource("5_2r7uv")
volume_db = -15.928

[node name="Click_Button" type="AudioStreamPlayer" parent="TextureButton3"]
stream = ExtResource("11_2r7uv")

[node name="PLAY" type="Label" parent="."]
offset_left = 441.0
offset_top = 400.0
offset_right = 728.0
offset_bottom = 452.0
theme_override_fonts/font = ExtResource("5_a13a4")
theme_override_font_sizes/font_size = 39
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GALERY" type="Label" parent="."]
offset_left = 484.0
offset_top = 476.0
offset_right = 685.0
offset_bottom = 526.0
theme_override_fonts/font = ExtResource("5_a13a4")
theme_override_font_sizes/font_size = 39
text = "GALERY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 492.0
offset_top = 549.0
offset_right = 680.0
offset_bottom = 602.0
mouse_default_cursor_shape = 3
theme_override_fonts/font = ExtResource("5_a13a4")
theme_override_font_sizes/font_size = 39
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButtonAudio" type="TextureButton" parent="."]
offset_left = 1053.0
offset_top = 10.0
offset_right = 1135.0
offset_bottom = 97.0
mouse_default_cursor_shape = 2

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButtonAudio"]
stream = ExtResource("5_2r7uv")
volume_db = -15.928

[node name="Click_Button" type="AudioStreamPlayer" parent="TextureButtonAudio"]
stream = ExtResource("11_2r7uv")

[node name="Audio" type="Sprite2D" parent="TextureButtonAudio"]
position = Vector2(47, 42)
scale = Vector2(0.10367, 0.100168)
texture = ExtResource("8_54mhx")

[node name="HSlider" type="HSlider" parent="."]
offset_left = 953.0
offset_top = 109.0
offset_right = 1141.0
offset_bottom = 125.0
mouse_default_cursor_shape = 2
min_value = -20.0
max_value = 20.0

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="mouse_entered" from="TextureButton2" to="." method="_on_texture_button_2_mouse_entered"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="ready" from="TextureButton2/Click_Button" to="." method="_on_click_button_ready"]
[connection signal="mouse_entered" from="TextureButton3" to="." method="_on_texture_button_3_mouse_entered"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="mouse_entered" from="TextureButtonAudio" to="." method="_on_texture_button_audio_mouse_entered"]
[connection signal="pressed" from="TextureButtonAudio" to="." method="_on_texture_button_audio_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
